--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Madhur Achanta's Portfolio - Tech entrepreneur and AI enthusiast" />
+  <meta name="description" content="Madhur Achanta's Portfolio - Aspiring entrepreneur and AI enthusiast" />
   <title>Madhur Achanta</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
