--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,23 @@
 </head>
 <body class="bg-white dark:bg-dark text-gray-900 dark:text-gray-100">
   <div id="root"></div>
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Madhur Achanta",
+  "url": "https://madhur-achanta.vercel.app",
+  "sameAs": [
+    "https://github.com/MadhurAchanta",
+    "https://www.linkedin.com/in/madhur-achanta"
+  ],
+  "jobTitle": "Software Engineer",
+  "worksFor": {
+    "@type": "Sri Vasavi Engineering College",
+    "name": "Black Box Student Community"
+  }
+}
+</script>
+
 </body>
 </html>
