--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="9heIASi968b1cjnutC3qdz4lui1VA3FzbWbd6ml6Eeg" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Madhur Achanta's Portfolio - Aspiring entrepreneur and AI enthusiast" />
