--- a/public/index.html
+++ b/public/index.html
@@ -6,29 +6,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Madhur Achanta's Portfolio - Aspiring entrepreneur and AI enthusiast" />
   <title>Madhur Achanta</title>
+
+  <!-- ✅ Favicon link added below -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+
 <body class="bg-white dark:bg-dark text-gray-900 dark:text-gray-100">
   <div id="root"></div>
-  <script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Madhur Achanta",
-  "url": "https://madhur-achanta.vercel.app",
-  "sameAs": [
-    "https://github.com/MadhurAchanta",
-    "https://www.linkedin.com/in/madhur-achanta"
-  ],
-  "jobTitle": "Software Engineer",
-  "worksFor": {
-    "@type": "Sri Vasavi Engineering College",
-    "name": "Black Box Student Community"
-  }
-}
-</script>
 
+  <!-- ✅ JSON-LD Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Madhur Achanta",
+    "url": "https://madhur-achanta.vercel.app",
+    "sameAs": [
+      "https://github.com/MadhurAchanta",
+      "https://www.linkedin.com/in/madhur-achanta"
+    ],
+    "jobTitle": "Software Engineer",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Black Box Student Community"
+    }
+  }
+  </script>
 </body>
 </html>
